feat: add modify

--- a/start.html
+++ b/start.html
@@ -32,7 +32,7 @@
     <!-- FRIST SECTION -->
 
     <div id="frist-section">
-        <div class="container">
+        <article class="container">
             <img src="assets/laptop.png" alt="laptop">
             <h1>My Article 1</h1>
             <p>
@@ -43,9 +43,9 @@
                 delectus, architecto eaque natus sequi eligendi adipisci exercitationem, veritatis vel doloremque
                 possimus!
             </p>
-        </div>
+        </article>
 
-        <div class="container">
+        <article class="container">
             <img src="assets/hands.png" alt="hands">
             <h1>My Article 2</h1>
             <p>
@@ -56,9 +56,9 @@
                 delectus, architecto eaque natus sequi eligendi adipisci exercitationem, veritatis vel doloremque
                 possimus!
             </p>
-        </div>
+        </article>
 
-        <div class="container">
+        <article class="container">
             <img src="assets/laptop.png" alt="laptop">
             <h1>My Article 3</h1>
             <p>
@@ -69,7 +69,7 @@
                 delectus, architecto eaque natus sequi eligendi adipisci exercitationem, veritatis vel doloremque
                 possimus!
             </p>
-        </div>
+        </article>
     </div>
 
 
